    - Bump build dependencies versions (debhelper and pkg-kde-tools)
    - Remove quilt build dependency
    - Use net section instead of kde
    - Rename kdebluetooth in line with upstream to kbluetooth
    - Add kdebluetooth transitional package
  * Update debian/rules:
    - Enable parallel build (pass --parallel option to dh)
    - Use kde sequence addon (pass --with kde option to dh)
  * Merge from Ubuntu:
    - Add kubuntu_02_autostart.diff patch
    - Don't depend on the bluetooth metapackage, but instead on the individual
      packages (bluez, bluez-alsa and bluez-cups).
      bluetooth also includes bluez-gstreamer which is undesirable for KDE
    - Add build-depend on shard-desktop-ontologies for Nepomuk support
      (LP: #354860)

 -- Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>  Thu, 04 Mar 2010 16:05:42 +0100

kdebluetooth (1:0.4~rc1-1) experimental; urgency=low

  * Imported Upstream version 0.4~rc1
  * Don't use dcop in kblueplugd, taken from Ubuntu package.
  * Replaced old save-directory patch with new one. Taken from Ubuntu as
    well.
  * Added build dependency on libknotificationitem-dev.
  * Bumped Standards-Version, no changes needed.

 -- Michael Meskes <meskes@debian.org>  Sat, 24 Oct 2009 19:28:10 +0200

kdebluetooth (1:0.3-1) experimental; urgency=low

  [ Fathi Boudra ]
  * Keep kdebluetooth naming
  * Fix typo
  * Drop CDBS build dependency

  [ Michael Meskes ]
  * Initial release of kde4 version, closes: #504109
  * Merged from Ubuntu:
    - kubuntu_01_save_to_home.diff patch.

 -- Michael Meskes <meskes@debian.org>  Sat, 18 Jul 2009 12:57:59 +0200

kdebluetooth (1.0~beta8-5) unstable; urgency=low

  * Removed XS- headers in control file.
  * Fixed bashism in dunhandler, closes: #489616
  * Bumped Standards-Version to 3.8.0, no changes needed.

 -- Michael Meskes <meskes@debian.org>  Wed, 09 Jul 2008 11:46:45 +0200

kdebluetooth (1.0~beta8-4) unstable; urgency=low
