@@ -1,42 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Name=KBluetoothD
-Name[sv]=Kbluetoothd
-Name[ta]=Kபுலுடுத்D
-Name[xx]=xxKBluetoothDxx
-GenericName=KDE Bluetooth Daemon
-GenericName[ar]=مراقب KDE Bluetooth
-GenericName[bg]=Демон за Bluetooth в KDE
-GenericName[br]=Diaoul KDE Bluetooth
-GenericName[bs]=KDE Bluetooth daemon
-GenericName[ca]=Dimoni Bluetooth de KDE
-GenericName[cs]=Bluetooth démon pro KDE
-GenericName[da]=KDE Bluetooth-dæmon
-GenericName[de]=KDE Bluetooth-Daemon
-GenericName[el]=Ο δαίμονας Bluetooth του KDE
-GenericName[es]=Daemon Bluetooth de KDE
-GenericName[et]=KDE Bluetoothi deemon
-GenericName[fr]=Démon KDE Bluetooth
-GenericName[gl]=Servizo Bluetooth de KDE
-GenericName[it]=Demone Bluetooth di KDE
-GenericName[ja]=KDE Bluetooth デーモン
-GenericName[ka]=KDE ბლუთუს დემონი
-GenericName[nl]=KDE Bluetooth-daemon
-GenericName[pa]=KDE ਬਲਿਊਟੁੱਥ ਡਾਈਮੋਨ
-GenericName[pl]=Demon Bluetooth dla KDE
-GenericName[pt]=Serviço Bluetooth do KDE
-GenericName[ru]=Служба KDE Bluetooth
-GenericName[sr]=Bluetooth демон за KDE
-GenericName[sr@Latn]=Bluetooth demon za KDE
-GenericName[sv]=KDE-Blåtandsdemon
-GenericName[ta]=KDE புலுடுத் டேமொன்
-GenericName[tr]=KDE Bluetooth Hizmeti
-GenericName[xx]=xxKDE Bluetooth Daemonxx
-Exec=kblueplugd
-Icon=kdebluetooth
-Type=Application
-DocPath=kdebluetooth/index.html
-Terminal=false
-X-KDE-autostart-after=panel
-X-KDE-StartupNotify=false
-X-KDE-autostart-condition=kbluetoothrc:General:AutoStart:true
